[project]
authors = [
    {name = "Albin Essman", email = "albines@student.chalmers.se"},
    {name = "Lukas Prader", email = "prader@student.chalmers.se"},
    {name = "Noah Tingbratt", email = "noahti@student.chalmers.se"},
    {name = "Truls Levenstam", email = "guslevtr@student.gu.se"},
    {name = "Yangguang Chen", email = "yangche@student.chalmers.se"}
]
name = "project_FTS"
version = "0.1.0"
description = "Project for the course Financial time series"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "matplotlib>=3.10.7",
    "ipykernel>=7.1.0",
    "nbconvert>=7.17.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "pmdarima>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["ANN", "A", "COM", "C4", "ICN", "PIE", "SIM", "I", "NPY", "PD", "N", "PERF", "D"]
